k8s/posts-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-service
  namespace: default
  labels:
    app: posts-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: posts-service
  template:
    metadata:
      labels:
        app: posts-service
    spec:
      containers:
        - name: posts-service
          image: mrxmoon/sporterz-posts-service:main  # Placeholder - ArgoCD Image Updater will set to commit SHA
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: posts-service
spec:
  type: ClusterIP
  selector:
    app: posts-service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
