k8s/kyverno-verify-signed-images.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-signed-sporterz-images
  annotations:
    policies.kyverno.io/title: Verify signed SporterZ images
    policies.kyverno.io/category: Supply Chain Security
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: Pod
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: verify-cosign-signature
      match:
        any:
          - resources:
              kinds:
                - Pod
      verifyImages:
        - imageReferences:
            - "mrxmoon/sporterz-*"
          mutateDigest: false
          required: true       
          verifyDigest: false
          attestors:
            - entries:
                - keys:
                    publicKeys: |-
                      -----BEGIN PUBLIC KEY-----
                      MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEzAo1pb29bSDjsF4roIU1A8FoNwgm
[...]
                      -----END PUBLIC KEY-----
    - name: block-unknown-images
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        pattern:
          spec:
            containers:
              - image: "mrxmoon/sporterz-* | prom/prometheus:v2.44.0 | grafana/grafana:10.0.0"
            initContainers:
              - image: "mrxmoon/sporterz-* | prom/prometheus:v2.44.0 | grafana/grafana:10.0.0"
